[package]
name = "gputest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
rust-gpu-tools = "0.6.1"
# snarkvm = "0.9.13"
snarkvm = { git = "https://github.com/hanbu97/snarkVM.git", rev = "9a110f7711" }

# [dependencies.rust-gpu-tools]
# version = "0.6.0"
# optional = true
